--- a/Fntt/Fntt/Fntt.csproj
+++ b/Fntt/Fntt/Fntt.csproj
@@ -28,5 +28,8 @@
     <EmbeddedResource Update="Visual\TodayTametable.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Visual\UserForm.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
